# image-match-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: image.rs  lib.rs
tests/: stats.rs
