[package]
name = "image-match"
version = "0.2.3"
edition = "2021"
description = "Derives an image signature to be used in quick image comparisons"
license = "GPL-3.0"
homepage = "https://alt-text.org"
repository = "https://github.com/alt-text-org/image-match-rs"
documentation = "http://www.cs.cmu.edu/~hcwong/Pdfs/icip02.ps"
keywords = ["image", "similarity", "vector", "signature"]

[dependencies]
image = { version = "0.24.6", optional = true}
num = "0.4.0"

[features]
img = ["image"]
